@@ -1,3 +1,15 @@
+2010-01-15  Viktor Kutuzov  <vkutuzov@accesssoftek.com>
+
+	* arm.cc (Arm_relocate_functions::thm_jump6): New function.
+	(Arm_relocate_functions::thm_jump8): New function.
+	(Arm_relocate_functions::thm_jump11): New function.
+	(Target_arm::Scan::local): Handle R_ARM_THM_JUMP6, R_ARM_THM_JUMP8,
+	R_ARM_THM_JUMP11.
+	(Target_arm::Scan::global): Likewise.
+	(Target_arm::Relocate::relocate): Likewise.
+	(Target_arm::Relocatable_size_for_reloc::get_size_for_reloc):
+	Likewise.
+
 2010-01-14  Doug Kwan  <dougkwan@google.com>
 
 	* arm.cc (map, utility): Include headers.
